test/corpus/stata.txt
========================================
Comments and strings
========================================
// line comment
/* block comment */
display "hello $name"
display `"`world'"'
display "$global"

---

(source_file
  (comment
    (line_comment))
  (comment
    (block_comment))
  (command
    name: (identifier)
    (string
      (double_string
        (global_macro
          (identifier)))))
  (command
    name: (identifier)
    (string
      (compound_string_depth_1
        (local_macro_depth_1
          (identifier)))))
  (command
    name: (identifier)
    (string
      (double_string
        (global_macro
          (identifier))))))

========================================
Macros and numbers
========================================
local my_local `other'
global my_global ${other}
display `1' 3.14 .a _n

---

(source_file
  (macro_definition
    name: (identifier)
    (local_macro_depth_1
      (identifier)))
  (macro_definition
    name: (identifier)
    (global_macro
      (identifier)))
  (command
    name: (identifier)
    (local_macro_depth_1)
    (number)
    (missing_value)
    (builtin_variable)))

========================================
Program and mata blocks
========================================
program define myprog
    display "ok"
end
mata:
real x
end
mata { real y }
mata 1 + 2

---

(source_file
  (program_definition
    name: (identifier)
    (command
      name: (identifier)
      (string
        (double_string))))
  (mata_block)
  (mata_block)
  (mata_block))

========================================
Control keywords, types, operators
========================================
if x == 1
replace price = 2
foreach i in 1 2
display `i'
generate byte b = 1
generate str10 s = "hi"

---

(source_file
  (command
    name: (identifier)
    (identifier)
    (operator)
    (number))
  (command
    name: (identifier)
    (identifier)
    (operator)
    (number))
  (command
    name: (identifier)
    (identifier)
    (identifier)
    (number)
    (number))
  (command
    name: (identifier)
    (local_macro_depth_1
      (identifier)))
  (command
    name: (identifier)
    (type_keyword)
    (identifier)
    (operator)
    (number))
  (command
    name: (identifier)
    (type_keyword)
    (identifier)
    (operator)
    (string
      (double_string))))


========================================
Factor variables
========================================
regress y i.rep78 c.weight
xtreg mhcrowd_growth popgrowth c.popgrowth#i.shrink i.year, fe robust

---

(source_file
  (command
    name: (identifier)
    (identifier)
    (factor_variable
      (factor_operator)
      variable: (identifier))
    (factor_variable
      (factor_operator)
      variable: (identifier)))
  (command
    name: (identifier)
    (identifier)
    (identifier)
    (factor_variable
      (factor_operator)
      variable: (identifier))
    (operator)
    (factor_variable
      (factor_operator)
      variable: (identifier))
    (factor_variable
      (factor_operator)
      variable: (identifier))
    (identifier)
    (identifier)))

========================================
Inline and nested block comments
========================================
reg y x // this is an inline line comment
reg y x /* this is an inline block comment */
/***/
/** text **/
reg y /***/ x
/*
reg y x /* nested comment */
sum x
*/

---

(source_file
  (command
    name: (identifier)
    (identifier)
    (identifier)
    (comment
      (line_comment)))
  (command
    name: (identifier)
    (identifier)
    (identifier)
    (comment
      (block_comment)))
  (comment
    (block_comment))
  (comment
    (block_comment))
  (command
    name: (identifier)
    (identifier)
    (comment
      (block_comment))
    (identifier))
  (comment
    (block_comment
      (block_comment))))

========================================
Mid-command star is multiplication, not a comment
========================================
disp 2*3
gen z = x*y
summarize inc*, detail

---

(source_file
  (command
    name: (identifier)
    (number)
    (operator)
    (number))
  (command
    name: (identifier)
    (identifier)
    (operator)
    (identifier)
    (operator)
    (identifier))
  (command
    name: (identifier)
    (identifier)
    (operator)
    (identifier)))

========================================
File commands preserve filename extensions
========================================
use merp.do
use merp.dta
save x.dta
do analysis.do

---

(source_file
  (file_command
    name: (identifier)
    (file_path))
  (file_command
    name: (identifier)
    (file_path))
  (file_command
    name: (identifier)
    (file_path))
  (file_command
    name: (identifier)
    (file_path)))

========================================
File command options, paths, and varlist using-form
========================================
use mydata.dta, clear
use mpg weight using auto.dta
import delimited records.csv

---

(source_file
  (file_command
    name: (identifier)
    (file_path)
    (identifier))
  (file_command
    name: (identifier)
    (identifier)
    (identifier)
    (using_clause
      (file_path)))
  (file_command
    name: (identifier)
    (identifier)
    (file_path)))

========================================
using clause in non-file commands
========================================
merge 1:1 id using other.dta
append using a.dta b.dta
merge 1:1 id using "my file.dta"

---

(source_file
  (command
    name: (identifier)
    (number)
    (identifier)
    (using_clause
      (file_path)))
  (command
    name: (identifier)
    (using_clause
      (file_path)
      (file_path)))
  (command
    name: (identifier)
    (number)
    (identifier)
    (using_clause
      (string
        (double_string)))))

========================================
Comments after file paths
========================================
use x.dta // load the data
save out.dta /* inline */
merge 1:1 id using other.dta // merge it

---

(source_file
  (file_command
    name: (identifier)
    (file_path)
    (comment
      (line_comment)))
  (file_command
    name: (identifier)
    (file_path)
    (comment
      (block_comment)))
  (command
    name: (identifier)
    (number)
    (identifier)
    (using_clause
      (file_path))
    (comment
      (line_comment))))

========================================
Filesystem commands take path arguments
========================================
cd data/sub
erase old.dta
copy a.txt b.txt

---

(source_file
  (file_command
    name: (identifier)
    (file_path))
  (file_command
    name: (identifier)
    (file_path))
  (file_command
    name: (identifier)
    (file_path)
    (file_path)))

========================================
File paths and factor variables coexist (issue #51 guard)
========================================
use auto.dta, clear
regress mpg i.rep78 c.weight

---

(source_file
  (file_command
    name: (identifier)
    (file_path)
    (identifier))
  (command
    name: (identifier)
    (identifier)
    (factor_variable
      (factor_operator)
      variable: (identifier))
    (factor_variable
      (factor_operator)
      variable: (identifier))))
